# transformer_engine_v1.7_oneapi2025

tests_migrated/cpp/: CMakeLists.txt  test_common.cpp  test_common.h
tests_migrated/cpp/operator/: CMakeLists.txt  test_cast_transpose.cpp  test_cast_transpose_dbias.cpp  test_cast_transpose_dbias_dgelu.cpp  test_cast_transpose_dgeglu.dp.cpp  test_causal_softmax.cpp  test_dgeglu.cpp  test_geglu.cpp  test_gelu.cpp  test_layernorm.cpp  test_multi_cast_transpose.cpp  test_qdq.cpp  test_rmsnorm.cpp  test_transpose.cpp
tests_migrated/cpp/util/: CMakeLists.txt  test_nvrtc.cpp
transformer_engine/: CMakeLists.txt
transformer_engine/common/: CMakeLists.txt
transformer_engine/migrated/common/: common.h  nvtx.h  utils.dp.hpp
transformer_engine/migrated/common/include/transformer_engine/: activation.h  cast_transpose_noop.h  fused_attn.h  transpose.h
transformer_engine_migrated/: CMakeLists.txt
transformer_engine_migrated/common/: CMakeLists.txt  common.h  nvtx.h  transformer_engine.cpp  transformer_engine.cpp.dp.cpp  utils.py.dp.cpp
transformer_engine_migrated/common/activation/: activation_template.h  gelu.cpp  relu.cpp  swiglu.cpp
transformer_engine_migrated/common/include/transformer_engine/: recipe.h  transformer_engine.h
transformer_engine_migrated/common/util/: cast.cpp  cuda_driver.cpp  cuda_driver.h  cuda_runtime.cpp  logging.h  math.h  rtc.cpp  rtc.h  system.cpp  system.h  vectorized_pointwise.h
